@@ -2405,7 +2405,10 @@ SCIP_RETCODE emphasisParse(
    while ( *line == ' ' || *line == '\t' || *line == '\r' )
       line++;
    if ( *line == '\0' || *line == '\n' || *line == '#' )
-      return SCIP_OKAY;
+   {
+      SCIPerrorMessage("specification of emphasis type is missing.\n");
+      return SCIP_READERROR;
+   }
    paramname = line;
 
    /* find the end of the parameter name */
@@ -2480,7 +2483,7 @@ SCIP_RETCODE emphasisParse(
       ++line;
    if ( *line == '\0' || *line == '\n' || *line == '#' )
    {
-      SCIPerrorMessage("emphasis parameter value is missing\n");
+      SCIPerrorMessage("emphasis parameter value is missing.\n");
       return SCIP_READERROR;
    }
    paramvaluestr = line;
@@ -2516,7 +2519,7 @@ SCIP_RETCODE emphasisParse(
       paramsetting = SCIP_PARAMSETTING_OFF;
    else
    {
-      SCIPerrorMessage("unkown parameter setting: %s.\n", paramvaluestr);
+      SCIPerrorMessage("unkown emphasis parameter setting: %s (available: default, aggressive, fast, off).\n", paramvaluestr);
       return SCIP_READERROR;
    }
 
@@ -2533,6 +2536,12 @@ SCIP_RETCODE emphasisParse(
    {
       SCIP_CALL( SCIPsetSetSeparating(set, messagehdlr, paramsetting, FALSE) );
    }
+   else
+   {
+      SCIPerrorMessage("unkown emphasis type: %s (available: heuristics, presolving, separating).\n", paramname);
+      return SCIP_READERROR;
+   }
+
 
    return SCIP_OKAY;
 }
